cleaning up code

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,28 @@ JacobDev/Main/settings.gradle
 JacobDev/Main/src/main/deploy/example.txt
 JacobDev/Main/src/main/java/frc/robot/Main.java
 JacobDev/Main/src/main/java/frc/robot/Robot.java
+JackDev/Main/src/main/java/frc/robot/Robot.java
+JackDev/Main/src/main/java/frc/robot/Main.java
+JackDev/Main/src/main/deploy/example.txt
+JackDev/Main/settings.gradle
+JackDev/Main/gradlew.bat
+JackDev/Main/gradlew
+JackDev/Main/gradle/wrapper/gradle-wrapper.properties
+JackDev/Main/gradle/wrapper/gradle-wrapper.jar
+JackDev/Main/build.gradle
+JackDev/Main/.wpilib/wpilib_preferences.json
+JackDev/Main/.vscode/settings.json
+JackDev/Main/.vscode/launch.json
+JackDev/Main-Imported/vendordeps/WPILibOldCommands.json
+JackDev/Main-Imported/src/main/java/frc/robot/Robot.java
+JackDev/Main-Imported/src/main/java/frc/robot/Main.java
+JackDev/Main-Imported/src/main/deploy/example.txt
+JackDev/Main-Imported/settings.gradle
+JackDev/Main-Imported/gradlew.bat
+JackDev/Main-Imported/gradlew
+JackDev/Main-Imported/gradle/wrapper/gradle-wrapper.properties
+JackDev/Main-Imported/gradle/wrapper/gradle-wrapper.jar
+JackDev/Main-Imported/build.gradle
+JackDev/Main-Imported/.wpilib/wpilib_preferences.json
+JackDev/Main-Imported/.vscode/settings.json
+JackDev/Main-Imported/.vscode/launch.json
