cleaning up github

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,28 @@ JackDev/Main-Imported/build.gradle
 JackDev/Main-Imported/.wpilib/wpilib_preferences.json
 JackDev/Main-Imported/.vscode/settings.json
 JackDev/Main-Imported/.vscode/launch.json
+DianaDev/Shooter/vendordeps/WPILibOldCommands.json
+DianaDev/Shooter/src/main/java/frc/robot/Robot.java
+DianaDev/Shooter/src/main/java/frc/robot/Main.java
+DianaDev/Shooter/src/main/deploy/example.txt
+DianaDev/Shooter/settings.gradle
+DianaDev/Shooter/gradlew.bat
+DianaDev/Shooter/gradlew
+DianaDev/Shooter/gradle/wrapper/gradle-wrapper.properties
+DianaDev/Shooter/gradle/wrapper/gradle-wrapper.jar
+DianaDev/Shooter/build.gradle
+DianaDev/Shooter/.wpilib/wpilib_preferences.json
+DianaDev/Shooter/.vscode/settings.json
+DianaDev/Shooter/.vscode/launch.json
+DianaDev/Main/src/main/java/frc/robot/Robot.java
+DianaDev/Main/src/main/java/frc/robot/Main.java
+DianaDev/Main/src/main/deploy/example.txt
+DianaDev/Main/settings.gradle
+DianaDev/Main/gradlew.bat
+DianaDev/Main/gradlew
+DianaDev/Main/gradle/wrapper/gradle-wrapper.properties
+DianaDev/Main/gradle/wrapper/gradle-wrapper.jar
+DianaDev/Main/build.gradle
+DianaDev/Main/.wpilib/wpilib_preferences.json
+DianaDev/Main/.vscode/settings.json
+DianaDev/Main/.vscode/launch.json
