cleaning up github 2/17

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,30 @@ ConnorDev/The Claw/src/main/deploy/example.txt
 ConnorDev/The Claw/src/main/java/frc/robot/Claw.java
 ConnorDev/The Claw/src/main/java/frc/robot/Main.java
 ConnorDev/The Claw/src/main/java/frc/robot/Robot.java
+CalebDev/Main/.vscode/launch.json
+CalebDev/Main/.vscode/settings.json
+CalebDev/Main/.wpilib/wpilib_preferences.json
+CalebDev/Main/build.gradle
+CalebDev/Main/gradle/wrapper/gradle-wrapper.jar
+CalebDev/Main/gradle/wrapper/gradle-wrapper.properties
+CalebDev/Main/gradlew
+CalebDev/Main/gradlew.bat
+CalebDev/Main/settings.gradle
+CalebDev/Main/src/main/deploy/example.txt
+CalebDev/Main/src/main/java/frc/robot/Main.java
+CalebDev/Main/src/main/java/frc/robot/Robot.java
+CalebDev/Tank Example/Tank_Example/.vscode/launch.json
+CalebDev/Tank Example/Tank_Example/.vscode/settings.json
+CalebDev/Tank Example/Tank_Example/.wpilib/wpilib_preferences.json
+CalebDev/Tank Example/Tank_Example/build.gradle
+CalebDev/Tank Example/Tank_Example/gradle/wrapper/gradle-wrapper.jar
+CalebDev/Tank Example/Tank_Example/gradle/wrapper/gradle-wrapper.properties
+CalebDev/Tank Example/Tank_Example/gradlew
+CalebDev/Tank Example/Tank_Example/gradlew.bat
+CalebDev/Tank Example/Tank_Example/settings.gradle
+CalebDev/Tank Example/Tank_Example/src/main/deploy/example.txt
+CalebDev/Tank Example/Tank_Example/src/main/java/frc/robot/Main.java
+CalebDev/Tank Example/Tank_Example/src/main/java/frc/robot/Robot.java
+CalebDev/Tank Example/Tank_Example/vendordeps/navx_frc.json
+CalebDev/Tank Example/Tank_Example/vendordeps/Phoenix.json
+CalebDev/Tank Example/Tank_Example/vendordeps/WPILibOldCommands.json
