cleaning up github 2/17

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,14 @@ CalebDev/Tank Example/Tank_Example/src/main/java/frc/robot/Robot.java
 CalebDev/Tank Example/Tank_Example/vendordeps/navx_frc.json
 CalebDev/Tank Example/Tank_Example/vendordeps/Phoenix.json
 CalebDev/Tank Example/Tank_Example/vendordeps/WPILibOldCommands.json
+BenDev/shooterTest/.vscode/launch.json
+BenDev/shooterTest/.vscode/settings.json
+BenDev/shooterTest/.wpilib/wpilib_preferences.json
+BenDev/shooterTest/build.gradle
+BenDev/shooterTest/gradle/wrapper/gradle-wrapper.jar
+BenDev/shooterTest/gradle/wrapper/gradle-wrapper.properties
+BenDev/shooterTest/gradlew
+BenDev/shooterTest/settings.gradle
+BenDev/shooterTest/src/main/java/frc/robot/Main.java
+BenDev/shooterTest/src/main/java/frc/robot/Robot.java
+BenDev/shooterTest/vendordeps/WPILibOldCommands.json
