removed usless projects 2/17

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,58 @@ DianaDev/Main/.gradle/5.0/fileHashes/fileHashes.lock
 DianaDev/Main/.gradle/5.0/fileContent/fileContent.lock
 DianaDev/Main/.gradle/5.0/fileChanges/last-build.bin
 DianaDev/Main/.classpath
+KyleDev/subteamPractice/vendordeps/WPILibOldCommands.json
+KyleDev/subteamPractice/vendordeps/WPILibNewCommands.json
+KyleDev/subteamPractice/vendordeps/REVRobotics.json
+KyleDev/subteamPractice/vendordeps/Phoenix.json
+KyleDev/subteamPractice/vendordeps/navx_frc.json
+KyleDev/subteamPractice/src/main/java/frc/robot/Robot.java
+KyleDev/subteamPractice/src/main/java/frc/robot/Main.java
+KyleDev/subteamPractice/src/main/deploy/example.txt
+KyleDev/subteamPractice/settings.gradle
+KyleDev/subteamPractice/gradlew.bat
+KyleDev/subteamPractice/gradlew
+KyleDev/subteamPractice/gradle/wrapper/gradle-wrapper.properties
+KyleDev/subteamPractice/gradle/wrapper/gradle-wrapper.jar
+KyleDev/subteamPractice/build.gradle
+KyleDev/subteamPractice/.wpilib/wpilib_preferences.json
+KyleDev/subteamPractice/.vscode/settings.json
+KyleDev/subteamPractice/.vscode/launch.json
+KyleDev/Newpractice/build/tmp/jar/MANIFEST.MF
+KyleDev/Newpractice/build/libs/Newpractice.jar
+KyleDev/Newpractice/bin/main/frc/robot/Robot.class
+KyleDev/Newpractice/bin/main/frc/robot/Main.class
+KyleDev/Newpractice/bin/main/frc/robot/controller.class
+KyleDev/Newpractice/bin/main/frc/robot/constants.class
+KyleDev/Newpractice/bin/main/frc/robot/constants.class
+KyleDev/Newpractice/.settings/org.eclipse.buildship.core.prefs
+KyleDev/Newpractice/.project
+KyleDev/Newpractice/.gradle/vcs-1/gc.properties
+KyleDev/Newpractice/.gradle/buildOutputCleanup/outputFiles.bin
+KyleDev/Newpractice/.gradle/buildOutputCleanup/cache.properties
+KyleDev/Newpractice/.gradle/buildOutputCleanup/buildOutputCleanup.lock
+KyleDev/Newpractice/.gradle/6.0.1/javaCompile/taskHistory.bin
+KyleDev/Newpractice/.gradle/6.0.1/javaCompile/javaCompile.lock
+KyleDev/Newpractice/.gradle/6.0.1/javaCompile/jarAnalysis.bin
+KyleDev/Newpractice/.gradle/6.0.1/javaCompile/classAnalysis.bin
+KyleDev/Newpractice/.gradle/6.0.1/gc.properties
+KyleDev/Newpractice/.gradle/6.0.1/fileHashes/resourceHashesCache.bin
+KyleDev/Newpractice/.gradle/6.0.1/fileHashes/fileHashes.lock
+KyleDev/Newpractice/.gradle/6.0.1/fileHashes/fileHashes.bin
+KyleDev/Newpractice/.gradle/6.0.1/fileContent/fileContent.lock
+KyleDev/Newpractice/.gradle/6.0.1/fileChanges/last-build.bin
+KyleDev/Newpractice/.gradle/6.0.1/executionHistory/executionHistory.lock
+KyleDev/Newpractice/.gradle/6.0.1/executionHistory/executionHistory.bin
+KyleDev/Newpractice/.classpath
+KyleDev/Main/src/main/java/frc/robot/Robot.java
+KyleDev/Main/src/main/java/frc/robot/Main.java
+KyleDev/Main/src/main/deploy/example.txt
+KyleDev/Main/settings.gradle
+KyleDev/Main/gradlew.bat
+KyleDev/Main/gradlew
+KyleDev/Main/gradle/wrapper/gradle-wrapper.properties
+KyleDev/Main/gradle/wrapper/gradle-wrapper.jar
+KyleDev/Main/build.gradle
+KyleDev/Main/.wpilib/wpilib_preferences.json
+KyleDev/Main/.vscode/settings.json
+KyleDev/Main/.vscode/launch.json
